@@ -4,6 +4,7 @@
 
 - Topology-based event correlation improved
 - Network discovery improved
+- New NXSL functions: ceil, floor, round, format
 - Management console:
 	- "Alarm Details" view
 	- "Area" option implemented on line charts
